engadindo a navegación entre fragmentos

--- a/UF1_Proyecto/app/src/main/res/layout/fragment_notes.xml
+++ b/UF1_Proyecto/app/src/main/res/layout/fragment_notes.xml
@@ -23,6 +23,7 @@
             android:inputType="textMultiLine"
             android:hint="Mensaje: " />
         <Button
+            android:id="@+id/boton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Enviar" />
