--- a/UF1_Proyecto/app/src/main/res/layout/item_best.xml
+++ b/UF1_Proyecto/app/src/main/res/layout/item_best.xml
@@ -8,19 +8,19 @@
 
     <TextView
         android:id="@+id/bestChoice"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="333dp"
+        android:layout_height="18dp"
         android:layout_gravity="center_horizontal|center"
-        android:layout_marginStart="30dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:background="@drawable/rounded_background"
         android:fontFamily="sans-serif-light"
-        android:paddingHorizontal="10dp"
+        android:textAlignment="center"
         android:textColor="@color/darkBlue"
         android:textSize="15dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Nome de exemplo" />
