--- a/UF1_Proyecto/app/src/main/res/values/colors.xml
+++ b/UF1_Proyecto/app/src/main/res/values/colors.xml
@@ -6,7 +6,10 @@
     <color name="mainOrange">#EA6736</color>
     <color name="darkBlue">#075a8f</color>
     <color name="lightBlue">#0ac6cc</color>
+    <color name="green">#4CAF50</color>
+    <color name="red">#A10303</color>
 
     <color name="salmon">#f4a460</color>
     <color name="darkBlueTransparent">#80075a8f</color> <!-- El primer byte (80) representa la opacidad -->
+
 </resources>
