--- a/UF1_Proyecto/app/src/main/res/layout/fragment_place.xml
+++ b/UF1_Proyecto/app/src/main/res/layout/fragment_place.xml
@@ -1,18 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <!--
-<CoordinatorLayout>
-    <AppBarLayout>
-        <CollapsingToolbarLayout>
-            <MaterialToolbar/>
-        </CollapsingToolbarLayout>
-    </AppBarLayout>
-    <NestedScrollView>
-        <LinearLayout>  Solo puede haber un view
-            . . .
-        </LinearLayout>
-    </NestedScrollView>
-</CoordinatorLayout>
+Santiago de Compostela como exemplo
 -->
 
 <androidx.coordinatorlayout.widget.CoordinatorLayout
@@ -34,21 +23,22 @@
             android:layout_height="300dp"
             android:id="@+id/collapsing_toolbar"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
-            app:title="Ourense"
+            app:title="Santiago de Compostela"
             app:expandedTitleTextColor="@color/white"
-            app:collapsedTitleTextColor="@color/mainOrange"
+            app:collapsedTitleTextColor="@color/white"
             >
             <ImageView
+                android:id="@+id/placeImage"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
-                android:src="@drawable/ourense"
+                android:src="@drawable/santiago"
                 app:layout_collapseMode="parallax"/>
             <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                app:layout_collapseMode="parallax"
+                app:layout_collapseMode="pin"
                 />
         </com.google.android.material.appbar.CollapsingToolbarLayout>
     </com.google.android.material.appbar.AppBarLayout>
@@ -68,50 +58,7 @@
                 android:layout_height="match_parent"
 
                 android:text="@string/stay" />
-            <RadioGroup
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/group_pizza_type">
-                <RadioButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Margarita"
-                    android:id="@+id/radio_margarita" />
-                <RadioButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Calzone"
-                    android:id="@+id/radio_calzone" />
-            </RadioGroup>
-            <com.google.android.material.chip.ChipGroup
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/chip_group">
-                <com.google.android.material.chip.Chip
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Parmesano"
-                    android:id="@+id/chip_parmesano"
-                    style="@style/Widget.MaterialComponents.Chip.Choice"/>
-                <com.google.android.material.chip.Chip
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Tomate cherry"
-                    android:id="@+id/chip_tomate_cherry"
-                    style="@style/Widget.MaterialComponents.Chip.Choice"/>
-                <!-- <com.google.android.material.chip.Chip
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Mozzarella"
-                    android:id="@+id/chip_mozzarella"
-                    style="@style/Widget.MaterialComponents.Chip.Entry"/>
-                <com.google.android.material.chip.Chip
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Chorizo"
-                    android:id="@+id/chip_chorizo"
-                    style="@style/Widget.MaterialComponents.Chip.Filter"/> -->
-            </com.google.android.material.chip.ChipGroup>
+
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 
@@ -120,32 +67,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/fab"
-        android:layout_margin="20dp"
+        android:layout_margin="30dp"
         android:src="@android:drawable/ic_input_add"
-        android:layout_gravity="bottom|end"
+        android:layout_gravity="top"
+        app:layout_anchor="@id/collapsing_toolbar"
         style="@style/GreenFloatingActionButton"
+        app:layout_anchorGravity="bottom|end"
         ></com.google.android.material.floatingactionbutton.FloatingActionButton>
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab_help"
-        style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Tertiary"
-        android:layout_width="wrap_content"
-        android:layout_height="68dp"
-        android:layout_gravity="top"
-        android:layout_margin="10dp"
-        android:src="@android:drawable/ic_input_add"
-        app:layout_anchor="@id/collapsing_toolbar"
-        app:layout_anchorGravity="bottom|end"></com.google.android.material.floatingactionbutton.FloatingActionButton>
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab_help2"
-        style="@style/RedFloatingActionButton"
-        android:layout_width="wrap_content"
-        android:layout_height="70dp"
-        android:layout_gravity="top"
-        android:layout_margin="80dp"
-        android:src="@android:drawable/bottom_bar"
-        app:layout_anchor="@id/collapsing_toolbar"
-        app:layout_anchorGravity="bottom|end"></com.google.android.material.floatingactionbutton.FloatingActionButton>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
