--- a/UF1_Proyecto/app/src/main/res/layout/fragment_boat.xml
+++ b/UF1_Proyecto/app/src/main/res/layout/fragment_boat.xml
@@ -3,12 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".StayFragment">
+    tools:context=".BoatFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="ESTANCIA" />
+        android:text="BARCO" />
 
 </FrameLayout>
