--- a/UF1_Proyecto/app/src/main/res/layout/fragment_plane.xml
+++ b/UF1_Proyecto/app/src/main/res/layout/fragment_plane.xml
@@ -3,12 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ItemsFragment">
+    tools:context=".PlaneFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:text="AVION" />
 
 </FrameLayout>
