--- a/UF1_Proyecto/app/src/main/res/layout/fragment_selected_city.xml
+++ b/UF1_Proyecto/app/src/main/res/layout/fragment_selected_city.xml
@@ -1,15 +1,327 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<!--
+Santiago de Compostela como exemplo
+-->
+
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SelectedCityFragment"
-    android:background="@color/darkBlue">
+    tools:context=".MainActivity">
+    <com.google.android.material.appbar.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:titleTextColor="?attr/colorPrimary"
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+        >
+
+        <com.google.android.material.appbar.CollapsingToolbarLayout
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:id="@+id/collapsing_toolbar"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            app:title="Santiago de Compostela"
+            app:expandedTitleTextColor="@color/white"
+            app:collapsedTitleTextColor="@color/white"
+            >
+            <ImageView
+                android:id="@+id/placeImage"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:src="@drawable/santiago"
+                android:contentDescription="imaxe da cidade"
+                app:layout_collapseMode="parallax"/>
+            <com.google.android.material.appbar.MaterialToolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:layout_collapseMode="pin"
+                />
+        </com.google.android.material.appbar.CollapsingToolbarLayout>
+    </com.google.android.material.appbar.AppBarLayout>
+
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="ESTE É O DA CIDADE" />
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-</FrameLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:padding="10dp"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/country_and_languages"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/darkBlue"
+                android:layout_margin="5dp"
+                android:textColor="@color/white"
+                android:textAlignment="center"
+                android:padding="5dp"
+                tools:text="Está en España e fálase galego e español" />
+            <TextView
+                android:id="@+id/descriptionPlace"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/darkBlue"
+                android:layout_margin="5dp"
+                android:textColor="@color/white"
+                android:padding="15dp"
+                tools:text="Santiago de Compostela, o corazón espiritual de España, acolle aos visitantes coa súa arquitectura histórica, rutas de peregrinación e riqueza cultural. Desde a catedral de Santiago de Compostela ata a convulsa Praza do Obradoiro, a cidade ofrece un percorrido polo encanto medieval. Explora o Casco Histórico declarado Patrimonio da Humanidade pola UNESCO, visita o Museo do Pobo Galego e experimenta a peregrinación do Camiño de Santiago. O significado relixioso de Santiago de Compostela, a gastronomía tradicional galega e o ambiente animado das súas prazas fan dela un destino onde conflúen espiritualidade e historia." />
+
+            <TextView
+                android:id="@+id/activitiestxt"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textSize="15sp"
+                android:layout_margin="5dp"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                android:text="@string/activities" />
+
+            <TextView
+                android:id="@+id/activity1txt"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textSize="13sp"
+                android:layout_margin="5dp"
+                android:background="@color/lightBlue"
+                android:textColor="@color/darkBlue"
+                android:padding="5dp"
+                android:textAlignment="center"
+                android:textStyle="bold"
+                tools:text="Visita a Catedral de Santiago de Compostela" />
+
+            <TextView
+                android:id="@+id/activity2txt"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textSize="13sp"
+                android:layout_margin="5dp"
+                android:background="@color/lightBlue"
+                android:textColor="@color/darkBlue"
+                android:padding="5dp"
+                android:textAlignment="center"
+                android:textStyle="bold"
+                tools:text="Explorar a praza do Obradoiro" />
+            <TextView
+                android:id="@+id/activity3txt"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textSize="13sp"
+                android:layout_margin="5dp"
+                android:background="@color/lightBlue"
+                android:textColor="@color/darkBlue"
+                android:padding="5dp"
+                android:textAlignment="center"
+                android:textStyle="bold"
+                tools:text="Pasear pola Zona Vella" />
+
+            <TextView
+                android:id="@+id/activity4txt"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textSize="13sp"
+                android:layout_margin="5dp"
+                android:background="@color/lightBlue"
+                android:textColor="@color/darkBlue"
+                android:padding="5dp"
+                android:textAlignment="center"
+                android:textStyle="bold"
+                tools:text="Visita o Museo do Pobo Galego" />
+            <TextView
+                android:id="@+id/activity5txt"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textSize="13sp"
+                android:layout_margin="5dp"
+                android:background="@color/lightBlue"
+                android:textColor="@color/darkBlue"
+                android:padding="5dp"
+                android:textAlignment="center"
+                android:textStyle="bold"
+                tools:text="Vive o Camiño de Santiago" />
+
+            <TextView
+                android:id="@+id/activity6txt"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textSize="13sp"
+                android:layout_margin="5dp"
+                android:background="@color/lightBlue"
+                android:textColor="@color/darkBlue"
+                android:padding="5dp"
+                android:textAlignment="center"
+                android:textStyle="bold"
+                tools:text="Saborea a cociña tradicional galega" />
+
+            <TextView
+                android:id="@+id/placestxt"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textSize="15sp"
+                android:layout_margin="5dp"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                android:text="@string/places" />
+
+            <TextView
+                android:id="@+id/place1txt"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textSize="13sp"
+                android:layout_margin="5dp"
+                android:background="@color/lightBlue"
+                android:textColor="@color/darkBlue"
+                android:padding="5dp"
+                android:textAlignment="center"
+                android:textStyle="bold"
+                tools:text="Catedral de Santiago de Compostela" />
+
+            <TextView
+                android:id="@+id/place2txt"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textSize="13sp"
+                android:layout_margin="5dp"
+                android:background="@color/lightBlue"
+                android:textColor="@color/darkBlue"
+                android:padding="5dp"
+                android:textAlignment="center"
+                android:textStyle="bold"
+                tools:text="Praza do Obradoiro" />
+
+            <TextView
+                android:id="@+id/place3txt"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textSize="13sp"
+                android:layout_margin="5dp"
+                android:background="@color/lightBlue"
+                android:textColor="@color/darkBlue"
+                android:padding="5dp"
+                android:textAlignment="center"
+                android:textStyle="bold"
+                tools:text="Zona Vella" />
+            <TextView
+                android:id="@+id/place4txt"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textSize="13sp"
+                android:layout_margin="5dp"
+                android:background="@color/lightBlue"
+                android:textColor="@color/darkBlue"
+                android:padding="5dp"
+                android:textAlignment="center"
+                android:textStyle="bold"
+                tools:text="Museo do Pobo Galego" />
+            <TextView
+                android:id="@+id/place5txt"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textSize="13sp"
+                android:layout_margin="5dp"
+                android:background="@color/lightBlue"
+                android:textColor="@color/darkBlue"
+                android:padding="5dp"
+                android:textAlignment="center"
+                android:textStyle="bold"
+                tools:text="Camiño de Santiago" />
+            <TextView
+                android:id="@+id/place6txt"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textSize="13sp"
+                android:layout_margin="5dp"
+                android:background="@color/lightBlue"
+                android:textColor="@color/darkBlue"
+                android:padding="5dp"
+                android:textAlignment="center"
+                android:textStyle="bold"
+                tools:text="Parque da Alameda" />
+
+            <TextView
+                android:id="@+id/typicaltxt"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textSize="15sp"
+                android:layout_margin="5dp"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                android:text="@string/typical"/>
+            <TextView
+                android:id="@+id/typical1txt"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textSize="13sp"
+                android:layout_margin="5dp"
+                android:background="@color/lightBlue"
+                android:textColor="@color/darkBlue"
+                android:padding="5dp"
+                android:textAlignment="center"
+                android:textStyle="bold"
+                tools:text="Polbo á feira" />
+
+            <TextView
+                android:id="@+id/typical2txt"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textSize="13sp"
+                android:layout_margin="5dp"
+                android:background="@color/lightBlue"
+                android:textColor="@color/darkBlue"
+                android:padding="5dp"
+                android:textAlignment="center"
+                android:textStyle="bold"
+                tools:text="Tarta de Santiago" />
+            <TextView
+                android:id="@+id/typical3txt"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textSize="13sp"
+                android:layout_margin="5dp"
+                android:background="@color/lightBlue"
+                android:textColor="@color/darkBlue"
+                android:padding="5dp"
+                android:textAlignment="center"
+                android:textStyle="bold"
+                tools:text="Empanadas" />
+            <TextView
+                android:id="@+id/typical4txt"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textSize="13sp"
+                android:layout_margin="5dp"
+                android:background="@color/lightBlue"
+                android:textColor="@color/darkBlue"
+                android:padding="5dp"
+                android:textAlignment="center"
+                android:textStyle="bold"
+                tools:text="Queimada" />
+
+
+
+
+        </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
+
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/addButton"
+        android:layout_margin="30dp"
+        android:src="@android:drawable/ic_input_add"
+        android:layout_gravity="top"
+        app:layout_anchor="@id/collapsing_toolbar"
+        style="@style/GreenFloatingActionButton"
+        app:layout_anchorGravity="bottom|end"
+        ></com.google.android.material.floatingactionbutton.FloatingActionButton>
+
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
