--- a/UF1_Proyecto/app/src/main/res/layout/item_country.xml
+++ b/UF1_Proyecto/app/src/main/res/layout/item_country.xml
@@ -13,7 +13,7 @@
         android:layout_marginTop="20dp"
         android:scaleType="centerCrop"
         app:layout_constraintTop_toTopOf="parent"
-        tools:src="@drawable/france"/>
+        tools:src="@drawable/santiago"/>
 
     <TextView
         android:id="@+id/countryName"
@@ -24,10 +24,11 @@
         android:textColor="@color/white"
         android:textSize="40sp"
         android:textStyle="normal"
+        android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="@+id/countryImage"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/countryImage"
-        tools:text="Nome de exemplo"/>
+        tools:text="Santiago de Compostela"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
