--- a/UF1_Proyecto/app/src/main/res/values/themes.xml
+++ b/UF1_Proyecto/app/src/main/res/values/themes.xml
@@ -14,4 +14,8 @@
         <item name="backgroundTint">@color/red</item>
     </style>
     <style name="Theme.UF1_Proyecto" parent="Base.Theme.UF1_Proyecto" />
+
+    <style name="OrangeToolbar" parent="Widget.Material3.Toolbar">
+        <item name="backgroundTint">@color/mainOrange</item>
+    </style>
 </resources>
