--- a/UF1_Proyecto/app/src/main/res/layout/fragment_cities.xml
+++ b/UF1_Proyecto/app/src/main/res/layout/fragment_cities.xml
@@ -12,7 +12,7 @@
         android:singleLine="true"
         android:maxLines="1"
         android:imeOptions="actionDone"
-        android:hint="Buscar cidade"
+        android:hint="@string/searchCity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         />
