--- a/UF1_Proyecto/app/src/main/res/layout/fragment_countries.xml
+++ b/UF1_Proyecto/app/src/main/res/layout/fragment_countries.xml
@@ -12,7 +12,7 @@
         android:singleLine="true"
         android:maxLines="1"
         android:imeOptions="actionDone"
-        android:hint="Buscar país"
+        android:hint="@string/searchCountry"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
