--- a/UF1_Proyecto/app/src/main/res/navigation/nav_graph.xml
+++ b/UF1_Proyecto/app/src/main/res/navigation/nav_graph.xml
@@ -82,7 +82,7 @@
 
     <fragment
         android:id="@+id/tripFragment"
-        android:name="com.example.uf1_proyecto.TripFragment"
+        android:name="com.example.uf1_proyecto.data.TripFragment"
         android:label="@string/app_name"
         tools:layout="@layout/fragment_trip" />
     <fragment
